--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,8 @@ typings/
 cypress/screenshots
 cypress/videos
 public/images/.DS_Store
+api.package-lock.json
+api/package
+frontend/package-lock.json
+package-lock.json
+package.json
